<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#ffebee"
    tools:context=".TmbActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#ffebee"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tmb_description"
            android:layout_marginStart="5sp"
            android:layout_marginEnd="5sp"/>

        <ImageView
            style="@style/title_text_style"
            android:contentDescription="@string/imc_calculate_description"
            android:src="@drawable/tmb_icon_160dp" />

        <TextView
            android:id="@+id/txt_title_tmb_calculate"
            android:textColor="#531B8A"
            style="@style/title_text_style"
            android:text="@string/tmb_calculate_txtStr" />

        <EditText
            android:id="@+id/tmb_etxt_height"
            style="@style/edit_text_input_style"
            android:textColor="#531B8A"
            android:layout_marginTop="30sp"
            android:hint="@string/etxt_type_your_heightStr"
            android:textColorHint="#7E46B5"/>

        <EditText
            android:id="@+id/tmb_etxt_weight"
            style="@style/edit_text_input_style"
            android:hint="@string/etxt_type_your_weightStr"
            android:textColorHint="#7E46B5"
            android:maxLength="5" />

        <EditText
            android:id="@+id/tmb_age"
            style="@style/edit_text_input_style"
            android:hint="@string/tmb_ageStr"
            android:textColorHint="#7E46B5"
            android:maxLength="5" />
        <Spinner
            android:layout_marginTop="10sp"
            android:id="@+id/spinner_tmb_life_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/spinner_style"
            android:textAlignment="center"
            android:gravity="center"
            android:entries="@array/tmb_life_style"/>

        <Button
            android:id="@+id/btn_calculate_tmb"
            style="@style/tmb_button_style"
            android:layout_marginTop="40sp"
            android:text="@string/btn_txt_calculateStr"
            tools:targetApi="lollipop" />

    </LinearLayout>
</ScrollView>