<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ImcActivity"
    android:layout_gravity="center"
    android:background="#ffebee">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#ffebee"
    android:gravity="center"
    android:layout_gravity="center">

    <ImageView
        style="@style/vertical_center_style"
        android:contentDescription="@string/imc_calculate_description"
        android:src="@drawable/vintage_flower_icon_160dp" />

    <TextView
        android:id="@+id/txt_imc_calculate"
        style="@style/vertical_center_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/imc_calculate_txtStr"
        android:textColor="#8A1919"
        android:textSize="35sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etxt_height"
        style="@style/vertical_center_style"
        android:layout_marginTop="30sp"
        android:maxLength="5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/etxt_type_your_heightStr"
        android:inputType="numberDecimal"
        android:textColorHint="#ff5131"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etxt_weight"
        style="@style/vertical_center_style"
        android:maxLength="5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/etxt_type_your_weightStr"
        android:inputType="numberDecimal"
        android:textColorHint="#ff5131"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_calculate_imc"
        style="@style/vertical_center_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp"
        android:backgroundTint="#ff867a"
        android:paddingHorizontal="45dp"
        android:text="@string/btn_txt_calculate_imcStr"
        android:textColor="#8A1919"
        android:textStyle="bold"
        tools:targetApi="lollipop" />
    </LinearLayout>
</ScrollView>